inplement jooq and swagger-ui with securty